--- a/package.json
+++ b/package.json
@@ -14,26 +14,18 @@
   "homepage": "https://github.com/SC5/mozaik-ext-calendar",
   "main": "./components.js",
   "dependencies": {
-    "babel-core": "6.7.6",
-    "babel-preset-es2015": "6.6.0",
-    "babel-preset-react": "6.5.0",
-    "babelify": "7.2.0",
     "bluebird": "3.3.5",
     "convict": "^0.6.1",
-    "googleapis": "^1.1.4",
-    "moment": "^2.9.0",
+    "googleapis": "^28.0.1",
+    "lodash": "^4.17.5",
+    "md5": "^2.2.1",
+    "moment": "^2.21.0",
     "native-promise-only": "^0.7.6-a",
     "react-gravatar": "^1.0.0",
-    "react-mixin": "3.0.4",
-    "reflux": "0.4.1",
     "superagent": "1.8.3",
-    "superagent-bluebird-promise": "3.0.0",
-    "crypto-js": "^3.1.2-5"
+    "superagent-bluebird-promise": "3.0.0"
   },
   "devDependencies": {
-    "ava": "^0.15.2",
-    "babel-eslint": "6.0.2",
-    "babel-register": "6.7.2",
     "eslint": "^2.13.0",
     "eslint-plugin-react": "^5.2.2",
     "jsdom": "^9.2.1",
@@ -45,25 +37,8 @@
     "mozaik": ">=1.4.2",
     "react": "^0.13.3"
   },
-  "browserify": {
-    "transform": [
-      "babelify"
-    ]
-  },
-  "ava": {
-    "files": [
-      "tests/*.test.js"
-    ],
-    "tap": false,
-    "failFast": true,
-    "require": [
-      "babel-register"
-    ],
-    "babel": "inherit"
-  },
   "scripts": {
     "eslint": "eslint --ext .js --ext .jsx ./src/** ./test/**",
-    "lint": "npm run eslint",
-    "test": "ava"
+    "lint": "npm run eslint"
   }
 }
